📥 Added database connection

--- a/views/layout.phtml
+++ b/views/layout.phtml
@@ -9,7 +9,7 @@
 </head>
 <body>
 <main>
-    <?php require './controllers/' . $route . '_controller.php'; ?>
+    <?php require './src/controllers/' . $route . '_controller.php'; ?>
 </main>
 </body>
 </html>
