--- a/src/views/layout.phtml
+++ b/src/views/layout.phtml
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="./public/assets/css/styles.css">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Get my new car</title>
@@ -14,6 +15,7 @@
     <main>
         <?php require './src/controllers/' . $route . '_controller.php'; ?>
     </main>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
 </body>
 
 </html>
