--- a/src/views/home.phtml
+++ b/src/views/home.phtml
@@ -20,8 +20,8 @@
           </svg>
           <span class="sr-only">Toggle sidebar</span>
         </button>
-        <a href="https://flowbite.com" class="flex items-center justify-between mr-4">
-          <img src="https://flowbite.s3.amazonaws.com/logo.svg" class="mr-3 h-8" alt="Get My New Car Logo" />
+        <a href="/" class="flex items-center justify-between mr-4">
+          <img src="./public/assets/images/icon.png" class="mr-3 h-8" alt="Get My New Car Logo" />
           <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Get My New Car</span>
         </a>
         <form action="#" method="GET" class="hidden md:block md:pl-2">
