--- a/src/views/layout.phtml
+++ b/src/views/layout.phtml
@@ -7,6 +7,7 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="./public/assets/css/styles.css">
+    <link rel="icon" href="./public/assets/images/favicon.ico" type="image/ico" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Get my new car</title>
 </head>
