--- a/src/views/home.phtml
+++ b/src/views/home.phtml
@@ -22,7 +22,7 @@
         </button>
         <a href="/" class="flex items-center justify-between mr-4">
           <img src="./public/assets/images/icon.png" class="mr-3 h-8" alt="Get My New Car Logo" />
-          <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Get My New Car</span>
+          <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">Get My New Car</span>
         </a>
         <form action="#" method="GET" class="hidden md:block md:pl-2">
           <label for="topbar-search" class="sr-only">Search</label>
