feat(home.phtml / layout.phtml): add fake data for template card car

--- a/src/views/layout.phtml
+++ b/src/views/layout.phtml
@@ -7,12 +7,13 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="./public/assets/css/styles.css">
     <link rel="icon" href="./public/assets/images/favicon.ico" type="image/ico" />
+    <script src="https://kit.fontawesome.com/817262485e.js" crossorigin="anonymous"></script>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Get my new car</title>
 </head>
 
 <body>
-    <div class="antialiased bg-gray-50 dark:bg-gray-900">
+    <div class="antialiased dark:bg-gray-900">
         <?php require './src/views/global/nav.phtml' ?>
         <?php require './src/views/global/sidebar.phtml' ?>
 
