--- a/src/views/layout.phtml
+++ b/src/views/layout.phtml
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="./public/assets/css/styles.css">
     <link rel="icon" href="./public/assets/images/favicon.ico" type="image/ico" />
@@ -13,7 +14,7 @@
 </head>
 
 <body>
-    <div class="antialiased dark:bg-gray-900">
+    <div class="antialiased h-screen bg-gray-50 dark:bg-gray-900">
         <?php require './src/views/global/nav.phtml' ?>
         <?php require './src/views/global/sidebar.phtml' ?>
 
