--- a/src/views/global/nav.phtml
+++ b/src/views/global/nav.phtml
@@ -19,10 +19,11 @@
         </svg>
         <span class="sr-only">Toggle sidebar</span>
       </button>
-      <a href="index.php" class="flex items-center justify-between mr-4">
-        <img src="./public/assets/images/icon.png" class="mr-3 h-8" alt="Get My New Car Logo" />
-        <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Get My New Car</span>
-      </a>
+      <div class="flex items-center justify-between mr-4">
+        <img src="./public/assets/images/icon.png" class="icon mr-3 h-8" alt="Get My New Car Logo" />
+        <a href="index.php"> <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Get My
+            New Car</span></a>
+      </div>
       <form action="#" method="GET" class="hidden md:block md:pl-2">
         <label for="topbar-search" class="sr-only">Search</label>
         <div class="relative md:w-64 sm:w-96">
@@ -35,7 +36,7 @@
             </svg>
           </div>
           <input type="text" name="email" id="topbar-search"
-            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full pl-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
+            class=" bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full pl-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
             placeholder="Search" />
         </div>
       </form>
