--- a/src/views/home.phtml
+++ b/src/views/home.phtml
@@ -1,33 +1,33 @@
 <div class="flex flex-wrap justify-center gap-5">
 
-  <?php for ($i = 0; $i < 8; $i++) : ?>
-    <div class="max-w-[320px] relative rounded-md overflow-hidden shadow-lg hover:shadow-xl duration-150 cursor-pointer">
-      <img class="w-full" src="https://imgs.search.brave.com/CsNLNI64qxA3CTeWpce7r0OxVRHGlhXGfGDr09kmal0/rs:fit:860:0:0/g:ce/aHR0cHM6Ly9tZWRp/YS5nZXR0eWltYWdl/cy5jb20vaWQvNDU4/OTY0Njk5L3Bob3Rv/L3BvcnNjaGUtOTEx/LWd0My5qcGc_cz02/MTJ4NjEyJnc9MCZr/PTIwJmM9cGRKdmRR/WnRHdkFVUDJORC1p/WkpTWmdKbFg1UDRN/RDdCb3p2RTI5U3Vk/TT0" alt="Property Image">
-      <div class="px-6 py-4">
-        <div class="mb-2">
-          <h2 class="text-xl font-bold text-gray-900">Model de voiture</h2>
-          <h2 class="text-lg text-gray-900">Marque de voiture</h2>
-        </div>
-        <div class="flex justify-between">
-          <div class="flex items-center">
-            <i class="fa-solid fa-chart-simple"></i>
-            <p class="ml-2 text-sm font-medium text-gray-700">100 000 km</p>
+    <?php foreach ($cars as $car) { ?>
+        <div class="max-w-[320px] relative rounded-md overflow-hidden shadow-lg hover:shadow-xl duration-150 cursor-pointer">
+          <img class="w-full" src="<?= $car['image'] ?>" alt="Property Image">
+          <div class="px-6 py-4">
+            <div class="mb-2">
+              <h2 class="text-xl font-bold text-gray-900"><?= $car['model'] ?></h2>
+              <h2 class="text-lg text-gray-900"><?= $car['brand'] ?></h2>
+            </div>
+            <div class="flex justify-between">
+              <div class="flex items-center">
+                <i class="fa-solid fa-chart-simple"></i>
+                <p class="ml-2 text-sm font-medium text-gray-700"><?= $car['kilometers'] ?> km</p>
+              </div>
+              <div class="flex items-center">
+                <i class="fa-regular fa-calendar"></i>
+                <p class="ml-2 text-sm font-medium text-gray-700"><?= $car['date'] ?></p>
+              </div>
+            </div>
+            <div class="flex justify-between items-center">
+              <div class="mt-4">
+                <p class="text-3xl font-semibold text-red-600"><?= $car['price'] ?> €</p>
+              </div>
+              <button class="block absolute bottom-4 right-3 h-8 w-24 rounded-xl bg-red-600 text-lg font-bold text-white">
+                Détails
+              </button>
+            </div>
           </div>
-          <div class="flex items-center">
-            <i class="fa-regular fa-calendar"></i>
-            <p class="ml-2 text-sm font-medium text-gray-700">08/03/2024</p>
-          </div>
         </div>
-        <div class="flex justify-between items-center">
-          <div class="mt-4">
-            <p class="text-3xl font-semibold text-red-600">45 000 €</p>
-          </div>
-          <button class="block absolute bottom-4 right-3 h-8 w-24 rounded-xl bg-red-600 text-lg font-bold text-white">
-            Détails
-          </button>
-        </div>
-      </div>
-    </div>
-  <?php endfor; ?>
+    <?php } ?>
 
 </div>
