--- a/src/views/global/sidebar.phtml
+++ b/src/views/global/sidebar.phtml
@@ -20,7 +20,7 @@
     </form>
     <ul class="space-y-2 border-b pb-3 border-gray-200 dark:border-gray-700">
       <li>
-        <a href="#"
+        <a href="index.php"
           class="flex items-center p-2 text-base font-medium text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
           <svg aria-hidden="true"
             class="w-6 h-6 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white"
