--- a/src/views/global/sidebar.phtml
+++ b/src/views/global/sidebar.phtml
@@ -28,7 +28,7 @@
             <path d="M2 10a8 8 0 018-8v8h8a8 8 0 11-16 0z"></path>
             <path d="M12 2.252A8.014 8.014 0 0117.748 8H12V2.252z"></path>
           </svg>
-          <span class="ml-3">Every Cars</span>
+          <span class="ml-3">Toutes les voitures</span>
         </a>
       </li>
       <li>
@@ -42,7 +42,7 @@
               d="M10 2a4 4 0 00-4 4v1H5a1 1 0 00-.994.89l-1 9A1 1 0 004 18h12a1 1 0 00.994-1.11l-1-9A1 1 0 0015 7h-1V6a4 4 0 00-4-4zm2 5V6a2 2 0 10-4 0v1h4zm-6 3a1 1 0 112 0 1 1 0 01-2 0zm7-1a1 1 0 100 2 1 1 0 000-2z"
               clip-rule="evenodd"></path>
           </svg>
-          <span class="flex-1 ml-3 text-left whitespace-nowrap">Cars Edition</span>
+          <span class="flex-1 ml-3 text-left whitespace-nowrap">Mes voitures</span>
           <svg aria-hidden="true" class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20"
             xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd"
@@ -53,8 +53,8 @@
         <ul id="dropdown-cars" class="hidden py-2 space-y-2">
           <li>
             <a href="?page=add_car"
-              class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700">Add
-              Car</a>
+              class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700">Mettre en vente
+              </a>
           </li>
         </ul>
       </li>
@@ -69,7 +69,7 @@
               d="M5 9V7a5 5 0 0110 0v2a2 2 0 012 2v5a2 2 0 01-2 2H5a2 2 0 01-2-2v-5a2 2 0 012-2zm8-2v2H7V7a3 3 0 016 0z"
               clip-rule="evenodd"></path>
           </svg>
-          <span class="flex-1 ml-3 text-left whitespace-nowrap">Authentication</span>
+          <span class="flex-1 ml-3 text-left whitespace-nowrap">Authentification</span>
           <svg aria-hidden="true" class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20"
             xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd"
