fix messages page

--- a/src/views/global/sidebar.phtml
+++ b/src/views/global/sidebar.phtml
@@ -112,7 +112,7 @@
                                 d="M3 5a2 2 0 012-2h1a1 1 0 010 2H5v7h2l1 2h4l1-2h2V5h-1a1 1 0 110-2h1a2 2 0 012 2v10a2 2 0 01-2 2H5a2 2 0 01-2-2V5z">
                         </path>
                     </svg>
-                    <span class="flex-1 ml-3 whitespace-nowrap">Messages</span>
+                    <span class="flex-1 ml-3 whitespace-nowrap" href="?page=messages">Messages</span>
                     <span
                             class="inline-flex justify-center items-center w-5 h-5 text-xs font-semibold rounded-full text-primary-800 bg-primary-100 dark:bg-primary-200 dark:text-primary-800">
               4
