--- a/src/views/messages.phtml
+++ b/src/views/messages.phtml
@@ -1,10 +1,12 @@
 <h1>Messages</h1>
 
-<div class="row">
-  <div class="col-6">
-    <h2>Hello</h2>
-  </div>
-  <div class="col-6">
-    <h2>World</h2>
+<div>
+  <div class="row">
+    <div class="col-6">
+      <h2>Hello</h2>
+    </div>
+    <div class="col-6">
+      <h2>World</h2>
+    </div>
   </div>
 </div>
