Feat(another easter egg) : Check the languages

--- a/src/views/global/sidebar.phtml
+++ b/src/views/global/sidebar.phtml
@@ -53,8 +53,9 @@
         <ul id="dropdown-cars" class="hidden py-2 space-y-2">
           <li>
             <a href="?page=add_car"
-              class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700">Mettre en vente
-              </a>
+              class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700">Mettre
+              en vente
+            </a>
           </li>
         </ul>
       </li>
@@ -126,7 +127,7 @@
       <div class="tooltip-arrow" data-popper-arrow></div>
     </div>
     <button type="button" data-dropdown-toggle="language-dropdown"
-      class="inline-flex justify-center p-2 text-gray-500 rounded cursor-pointer dark:hover:text-white dark:text-gray-400 hover:text-gray-900 hover:bg-gray-100 dark:hover:bg-gray-600">
+      class="america inline-flex justify-center p-2 text-gray-500 rounded cursor-pointer dark:hover:text-white dark:text-gray-400 hover:text-gray-900 hover:bg-gray-100 dark:hover:bg-gray-600">
       <svg aria-hidden="true" class="h-5 w-5 rounded-full mt-0.5" xmlns="http://www.w3.org/2000/svg"
         xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 3900 3900">
         <path fill="#b22234" d="M0 0h7410v3900H0z" />
